testing overflow for scroll bug on mobile

--- a/src/resources/sass/base.scss
+++ b/src/resources/sass/base.scss
@@ -20,6 +20,11 @@ body {
   @include calculate-line-height(1);
   position: relative;
   min-height: 100%;
+  overflow: hidden;
+}
+
+.-unFreezeBody {
+  overflow: initial;
 }
 
 // for styling unstyled text
